--- a/notebooks/benchmarks_synthetic.ipynb
+++ b/notebooks/benchmarks_synthetic.ipynb
@@ -12,7 +12,7 @@
      "output_type": "stream",
      "text": [
       "numpy 1.10.2\n",
-      "zarr 0.1.1.dev7+dirty blosc 1.7.0 $Date:: 2015-07-05 #$\n",
+      "zarr 0.2.6.dev0+dirty blosc 1.7.0 $Date:: 2015-07-05 #$\n",
       "bcolz 0.12.2.dev22+dirty blosc 1.7.0 $Date:: 2015-07-05 #$\n"
      ]
     },
@@ -104,7 +104,8 @@
     {
      "data": {
       "text/plain": [
-       "zarr.ext.Array((100000000,), int32, chunks=(262144,), nbytes=381.5M, cbytes=6.6M, cratio=57.4, cname=lz4, clevel=5, shuffle=1)"
+       "zarr.ext.Array((100000000,), int32, chunks=(262144,), cname='lz4', clevel=5, shuffle=1)\n",
+       "  nbytes: 381.5M; cbytes: 6.6M; ratio: 57.4"
       ]
      },
      "execution_count": 4,
