--- a/docs/spec/v1.rst
+++ b/docs/spec/v1.rst
@@ -94,17 +94,17 @@ Data type encoding
 
 Simple data types are encoded within the array metadata resource as a
 string, following the `NumPy array protocol type string (typestr) format
-<http://docs.scipy.org/doc/numpy/reference/arrays.interface.html#>`_. The
+<http://docs.scipy.org/doc/numpy/reference/arrays.interface.html>`_. The
 format consists of 3 parts: a character describing the byteorder of the
-data (<: little-endian, >: big-endian, |: not-relevant), a character code
-giving the basic type of the array, and an integer providing the number of
-bytes the type uses. The byte order MUST be specified. E.g., '<f8', '>i4'
-'|b1' and '|S12' are valid data types.
+data (``<``: little-endian, ``>``: big-endian, ``|``: not-relevant), a
+character code giving the basic type of the array, and an integer providing
+the number of bytes the type uses. The byte order MUST be specified. E.g.,
+``"<f8"``, ``">i4"``, ``"|b1"`` and ``"|S12"`` are valid data types.
 
 Structure data types (i.e., with multiple named fields) are encoded as a
 list of two-element lists, following `NumPy array protocol type descriptions
 (descr) <http://docs.scipy.org/doc/numpy/reference/arrays.interface.html#>`_.
-For example, the JSON list ``[['r','|u1'], ['g','|u1'], ['b','|u1']]``
+For example, the JSON list ``[["r", "|u1"], ["g", "|u1"], ["b", "|u1"]]``
 defines a data type composed of three single-byte unsigned integers labelled
 'r', 'g' and 'b'.
 
