--- a/docs/spec/v2.rst
+++ b/docs/spec/v2.rst
@@ -112,7 +112,7 @@ the basic type of the array, and an integer providing the number of bytes the
 type uses. The byte order MUST be specified. E.g., ``"<f8"``, ``">i4"``, 
 ``"|b1"`` and ``"|S12"`` are valid data types.
 
-Structure data types (i.e., with multiple named fields) are encoded as a list 
+Structured data types (i.e., with multiple named fields) are encoded as a list
 of two-element lists, following `NumPy array protocol type descriptions (descr) 
 <http://docs.scipy.org/doc/numpy/reference/arrays.interface.html#>`_. For 
 example, the JSON list ``[["r", "|u1"], ["g", "|u1"], ["b", "|u1"]]`` defines a 
