--- a/docs/spec/v2.rst
+++ b/docs/spec/v2.rst
@@ -103,14 +103,23 @@ library::
 Data type encoding
 ~~~~~~~~~~~~~~~~~~
 
-Simple data types are encoded within the array metadata resource as a string, 
+Simple data types are encoded within the array metadata as a string,
 following the `NumPy array protocol type string (typestr) format 
 <http://docs.scipy.org/doc/numpy/reference/arrays.interface.html>`_. The format 
-consists of 3 parts: a character describing the byteorder of the data (``<``: 
-little-endian, ``>``: big-endian, ``|``: not-relevant), a character code giving 
-the basic type of the array, and an integer providing the number of bytes the 
-type uses. The byte order MUST be specified. E.g., ``"<f8"``, ``">i4"``, 
-``"|b1"`` and ``"|S12"`` are valid data types.
+consists of 3 parts:
+
+* One character describing the byteorder of the data (``"<"``: little-endian;
+  ``">"``: big-endian; ``"|"``: not-relevant)
+* One character code giving the basic type of the array (``"b"``: Boolean (integer
+  type where all values are only True or False); ``"i"``: integer; ``"u"``: unsigned
+  integer; ``"f"``: floating point; ``"c"``: complex floating point; ``"m"``: timedelta;
+  ``"M"``: datetime; ``"S"``: string (fixed-length sequence of char); ``"U"``: unicode
+  (fixed-length sequence of Py_UNICODE); ``"V"``: other (void * – each item is a
+  fixed-size chunk of memory))
+* An integer specifying the number of bytes the type uses.
+
+The byte order MUST be specified. E.g., ``"<f8"``, ``">i4"``, ``"|b1"`` and
+``"|S12"`` are valid data type encodings.
 
 Structured data types (i.e., with multiple named fields) are encoded as a list
 of two-element lists, following `NumPy array protocol type descriptions (descr) 
@@ -122,11 +131,17 @@ data type composed of three single-byte unsigned integers labelled "r", "g" and
 Fill value encoding
 ~~~~~~~~~~~~~~~~~~~
 
-Not a Number (NaN) MUST be encoded as the JSON string "NaN" if used as the
-value of the "fill_value" field.
+For simple floating point data types, the following table MUST be used to
+encode values of the "fill_value" field:
 
-When decoding the "fill_value" field, the JSON string "NaN" MUST be decoded
-as Not a Number (NaN) if the dtype basic type is floating point ("f").
+=================  ===============
+Value              JSON encoding
+=================  ===============
+Not a Number       ``"NaN"``
+Positive Infinity  ``"Infinity"``
+Negative Infinity  ``"-Infinity"``
+=================  ===============
+
 
 Chunks
 ~~~~~~
