Try unicode and bytes in notebook

--- a/notebooks/repr_tree.ipynb
+++ b/notebooks/repr_tree.ipynb
@@ -6,7 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import zarr"
+    "import zarr\n",
+    "\n",
+    "# Python 2/3 trick\n",
+    "try:\n",
+    "    unicode\n",
+    "except NameError:\n",
+    "    unicode = str"
    ]
   },
   {
@@ -42,12 +48,33 @@
     }
    ],
    "source": [
-    "print(g1.tree())"
+    "print(bytes(g1.tree()).decode())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bar\n",
+      " ├── baz\n",
+      " ├── quux\n",
+      " │   └── baz[...]\n",
+      " └── zoo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(unicode(g3.tree()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,14 +156,14 @@
       ],
       "text/plain": [
        "/\n",
-       " +-- bar\n",
-       "     +-- baz\n",
-       "     +-- quux\n",
-       "     |   +-- baz[...]\n",
-       "     +-- zoo"
+       " └── bar\n",
+       "     ├── baz\n",
+       "     ├── quux\n",
+       "     │   └── baz[...]\n",
+       "     └── zoo"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
