Change zarrTree to zarr-tree

--- a/notebooks/repr_tree.ipynb
+++ b/notebooks/repr_tree.ipynb
@@ -81,36 +81,36 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "div.zarrTree {\n",
+       "div.zarr-tree {\n",
        "    font-family: Courier, monospace;\n",
        "    font-size: 11pt;\n",
        "    font-style: normal;\n",
        "}\n",
        "\n",
-       "div.zarrTree ul,\n",
-       "div.zarrTree li,\n",
-       "div.zarrTree li > div {\n",
+       "div.zarr-tree ul,\n",
+       "div.zarr-tree li,\n",
+       "div.zarr-tree li > div {\n",
        "    display: block;\n",
        "    position: relative;\n",
        "}\n",
        "\n",
-       "div.zarrTree ul,\n",
-       "div.zarrTree li {\n",
+       "div.zarr-tree ul,\n",
+       "div.zarr-tree li {\n",
        "    list-style-type: none;\n",
        "}\n",
        "\n",
-       "div.zarrTree li {\n",
+       "div.zarr-tree li {\n",
        "    border-left: 2px solid #000;\n",
        "    margin-left: 1em;\n",
        "}\n",
        "\n",
-       "div.zarrTree li > div {\n",
+       "div.zarr-tree li > div {\n",
        "    padding-left: 1.3em;\n",
        "    padding-top: 0.225em;\n",
        "    padding-bottom: 0.225em;\n",
        "}\n",
        "\n",
-       "div.zarrTree li > div::before {\n",
+       "div.zarr-tree li > div::before {\n",
        "    content: '';\n",
        "    position: absolute;\n",
        "    top: 0;\n",
@@ -121,20 +121,20 @@
        "    border-bottom: 2px solid #000;\n",
        "}\n",
        "\n",
-       "div.zarrTree > ul > li:first-child > div {\n",
+       "div.zarr-tree > ul > li:first-child > div {\n",
        "    padding-left: 4%;\n",
        "}\n",
        "\n",
-       "div.zarrTree > ul > li:first-child > div::before {\n",
+       "div.zarr-tree > ul > li:first-child > div::before {\n",
        "    border: 0 none transparent;\n",
        "}\n",
        "\n",
-       "div.zarrTree ul > li:last-child {\n",
+       "div.zarr-tree ul > li:last-child {\n",
        "    border-left: 2px solid transparent;\n",
        "}\n",
        "</style>\n",
        "\n",
-       "<div class=\"zarrTree\">\n",
+       "<div class=\"zarr-tree\">\n",
        "<ul>\n",
        "    <li><div>/</div>\n",
        "        <ul>\n",
